--- a/backend/package.json
+++ b/backend/package.json
@@ -9,23 +9,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "firebase-admin": "^11.11.1",
     "axios": "^1.6.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "firebase-admin": "^11.11.1",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "cookie-parser": "^1.4.6"
+    "jsdom": "^26.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
-  "keywords": ["ai", "landing-page", "generator", "firebase"],
+  "keywords": [
+    "ai",
+    "landing-page",
+    "generator",
+    "firebase"
+  ],
   "author": "",
   "license": "MIT"
 }
