--- a/shared/package.json
+++ b/shared/package.json
@@ -7,28 +7,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.23.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "babel-jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
-  "keywords": ["shared", "components", "utilities"],
+  "keywords": [
+    "shared",
+    "components",
+    "utilities"
+  ],
   "author": "",
   "license": "MIT"
 }
